<resources>
    <string name="app_name">Flexible Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="local_service_started">Service: On</string>
    <string name="local_service_stopped">Service: Off</string>
    <string name="task_list_row_label">Task: %s</string>
    <string name="task_list_row_description_before">Due %s</string>
    <string name="task_list_row_description_after">Due %s</string>
    <string name="task_list_row_description_initial">First time</string>
    <string name="postpone_task_dialog_title">Postpone Task</string>
    <string name="postpone_task_dialog_confirm">Accept</string>
    <string name="postpone_task_dialog_cancel">Cancel</string>
    <string name="add_task_dialog_confirm">Accept</string>
    <string name="add_task_dialog_cancel">Cancel</string>
    <string name="add_task_dialog_title">Add New Task</string>
    <string name="task_list_delete_item">Delete</string>
    <string name="task_list_disable_item">Disable</string>
    <string name="task_list_enable_item">Enable</string>
    <string name="task_list_postpone_item">Postpone</string>
    <string name="task_list_execute_item">Done</string>
    <string name="period_picker_value_hint">period</string>
    <string name="task_postpone_label">Task: %s</string>
    <string name="task_postpone_permanent">Permanent</string>
    <string name="task_delete_dialog_confirm">Delete</string>
    <string name="task_delete_dialog_title">Confirm Deletion</string>
    <string name="task_delete_dialog_cancel">Cancel</string>
    <string name="task_delete_dialog_label">Task: %s</string>
    <string name="task_editor_label_label">Name</string>
    <string name="task_editor_label_hint">task label</string>
    <string name="task_editor_interval_label">Interval</string>
    <string name="task_list_item_disabled">Disabled</string>
    <string name="action_about">About</string>
    <string-array name="period_picker_units">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
    <string name="title_activity_about">About</string>
    <string name="about_text">
        <![CDATA[
        <p>FlexibleTasks v1.0</p>
        <p>© Michael Hoff 2016</p>
        <p>Found a bug? Report to <a href="mailto:mail@michael-hoff.net">mail@michael-hoff.net</a></p>
        <br />
        <p>Libraries:</p>
        <p>Joda-Time [<a href="http://www.joda.org/joda-time/">Web</a>]</p>
        <p>prettytime [<a href="http://www.ocpsoft.org/prettytime/">Web</a>]</p>
        <p>google-gson [<a href="https://github.com/google/gson">Web</a>]</p>
        <p>gson-jodatime-serialisers [<a href="https://github.com/gkopff/gson-jodatime-serialisers">Web</a>]</p>"
        ]]>
    </string>
</resources>
